# transgender-init

./: .gitattributes  Cargo.toml  LICENSE  README  README.md
androgen/: Cargo.toml
androgen/assets/proto/: androgen.proto  dependencies.proto  mount.proto  service.proto  slice.proto  timer.proto  unit.proto
androgen/src/include/: androgen-front.h
androgen/suatabi/include/: androgen-front.h  magic.h
kanit-suat/kanit/: .gitignore  Cargo.toml  LICENSE  distrobox.just  justfile  readme.md
kanit-suat/kanit/.woodpecker/: test.yml
kanit-suat/kanit/crates/cli/: Cargo.toml
kanit-suat/kanit/crates/cli/src/: blame.rs  flags.rs  lib.rs  main.rs  teardown.rs
kanit-suat/kanit/crates/cli/src/service/: disable.rs  enable.rs  list.rs  mod.rs
kanit-suat/kanit/crates/common/: Cargo.toml
kanit-suat/kanit/crates/common/src/: constants.rs  error.rs
kanit-suat/kanit/crates/diagnostics/: Cargo.toml
kanit-suat/kanit/crates/diagnostics/src/: lib.rs  logger.rs  scope.rs  tap.rs  timing.rs
kanit-suat/kanit/crates/executor/: Cargo.toml
kanit-suat/kanit/crates/executor/src/: lib.rs
kanit-suat/kanit/crates/init/: Cargo.toml
kanit-suat/kanit/crates/init/src/: baked_rc.rs  bsod.rs  ev_loop.rs  lib.rs  main.rs  rc.rs
kanit-suat/kanit/crates/rc/: Cargo.toml
kanit-suat/kanit/crates/rc/src/: control.rs  event.rs  lib.rs
kanit-suat/kanit/crates/rc/src/db/: mod.rs  unit.rs
kanit-suat/kanit/crates/rc/src/loader/: loader.rs  mod.rs  sort.rs
kanit-suat/kanit/crates/supervisor/: Cargo.toml
kanit-suat/kanit/crates/supervisor/src/: cli.rs  flags.rs  lib.rs  main.rs  supervisor.rs
kanit-suat/kanit/crates/unit/: Cargo.toml
kanit-suat/kanit/crates/unit/src/: dependencies.rs  lib.rs  supervisor.rs  unit.rs
kanit-suat/kanit/crates/units/: Cargo.toml
kanit-suat/kanit/crates/units/src/: lib.rs  loader.rs  mounts.rs
kanit-suat/kanit/crates/units/src/oneshot/: clock.rs  devfs.rs  hostname.rs  hwdrivers.rs  localmount.rs  mdev.rs  mod.rs  modules.rs  procfs.rs  rootfs.rs  run.rs  seed.rs  swap.rs  sysctl.rs  sysfs.rs
kanit-suat/kanit/crates/units/src/services/: getty.rs  mod.rs  syslog.rs
kanit-suat/kanit/docs/: async.md
kanit-suat/kanit/scripts/: answers  bake-vm.sh  bakery.exp  bakery.sh  controller.exp  mount.sh  prepare-vm.sh  umount.sh
kanit-suat/kanit/src/: main.rs
src/: init-driver.rs  init_driver.rs  macros.rs  main.rs
src/targets/: mod.rs
src/units/: mod.rs  service.rs
src/util/: macros.rs
