[package]
name = "kanit-diagnostics"
version.workspace = true
edition.workspace = true

[features]
tap = []
timings = ["send_wrapper"]

[dependencies.send_wrapper]
version = "0.6.0"
optional = true

[dependencies.log]
version = "0.4.21"
features = ["std"]

[dependencies.kanit-common]
path = "../common"
