[package]
name = "kanit-units"
version.workspace = true
edition.workspace = true

[features]
testing = []

[dependencies.async-process]
version = "2.1.0"

[dependencies.async-trait]
version = "0.1.77"

[dependencies.async-fs]
version = "2.1.1"

[dependencies.futures-lite]
version = "2.2.0"

[dependencies.blocking]
version = "1.5.1"

[dependencies.fastrand]
version = "2.0.1"

[dependencies.walkdir]
version = "2.5.0"

[dependencies.log]
version = "0.4.21"

[dependencies.nix]
version = "0.28"
features = [
    "signal",
    "process",
    "mount",
    "hostname",
    "time",
    "ioctl",
    "fs"
]

[dependencies.libc]
version = "0.2.153"

[dependencies.kanit-executor]
path = "../executor"

[dependencies.kanit-unit]
path = "../unit"

[dependencies.kanit-supervisor]
path = "../supervisor"

[dependencies.kanit-common]
path = "../common"
